[tool.poetry]
name = "alekgit_brain_games"
version = "0.0.1"
description = "A bunch of simple cli-games"
authors = ["alekgit <shalek.edu@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
