[tool.poetry]
name = "alekgit_brain_games"
version = "0.0.1"
description = "A bunch of simple cli-games"
authors = ["alekgit <shalek.edu@yandex.ru>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
